# english_cards

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  README.md  app.py  configs.py  docker-compose.yml  groq_llm.py  models.py  requirements.txt  setup.cfg  yandex_gpt.py
static/: styles.css
templates/: add_card.html  base.html  chat.html  error.html  game.html  highscores.html  index.html  login.html  memory_game.html  register.html  study.html  welcome.html
