[metadata]
name = english_flashcards
version = 1.0.0
description = Web application for learning English words with flashcards and games
author = Vladimir Dimitrov
author_email = dimitrov_rabota@mail.ru
url = https://github.com/Vladimir-Dimitrov-Ngu/english_cards

[options]
packages = find:
python_requires = >=3.8
install_requires =
    flask>=2.0.0
    werkzeug>=2.0.0
    sqlite3

[options.package_data]
static = *.css
templates = *.html

[flake8]
max-line-length = 120
exclude = 
    .git,
    __pycache__,
    build,
    dist,
    venv

[tool:pytest]
testpaths = tests
python_files = test_*.py
addopts = -v -ra -q

[coverage:run]
source = english_flashcards
omit =
    tests/*
    setup.py

[isort]
profile = black
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
line_length = 120

[mypy]
python_version = 3.8
disallow_untyped_defs = True
ignore_missing_imports = True
check_untyped_defs = True
warn_redundant_casts = True
warn_unused_ignores = True
warn_return_any = True
strict_optional = True 